# riffload

./: Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  riffload.spec
.github/workflows/: build.yml
app/core/: itunes_client.py  models.py  search_coordinator.py  torrent_manager.py
app/scrapers/: base_scraper.py  bitsearch_scraper.py  kickass_scraper.py  leet337x_scraper.py  nyaa_scraper.py  piratebay_scraper.py  torrentgalaxy_scraper.py
app/ui/: album_card.py  album_grid.py  download_bar.py  main_window.py  styles.py  torrent_panel.py
app/workers/: image_loader.py  search_worker.py
assets/: logo.icns
