[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "riffload"
version = "0.1.0"
description = "Music torrent browser — search, preview artwork, download to ~/Music"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.scripts]
riffload = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
